# epl_player_impact_analysis

./: FIFARating_sys.md  Player_Impact_Framework.md  README.md  main.py  notes.txt  pyproject.toml
config/: paths.py
data/interim/: PFA_nominees_additional_metrics.csv  pl_2025_26_nominees_stats.csv
data/processed/: final_pl_2025_26_nominees_stats.csv
data/raw/: attack.json  defence.json  goalkeeper.json  passing.json  summary.json
notebooks/: 01_Data_Validation.ipynb  02_Data_Integration.ipynb  03_Feature_Engineering.ipynb  04_Exploratory_Data_Analysis.ipynb
scripts/: sofascore_collector.py
